# ResolveAI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 003_create_after_sales_tables.py  005_create_policy_tables.py  006_create_customer_memories.py  007_create_approval_tasks.py  a33b3199a4a2_enable_pgvector_extension.py  bc03591cd96c_create_core_commerce_tables.py  e5faf6bf283e_create_agent_tables.py
backend/app/: __init__.py  exceptions.py  main.py
backend/app/agent/: __init__.py  graph.py  memory_decisions.py  orchestrator.py  pending_action_builder.py  provider.py  routing.py  sanitization.py  state.py
backend/app/api/: __init__.py  health.py
backend/app/config/: __init__.py  settings.py
backend/app/database/: __init__.py  base.py  engine.py  ingest_policies.py  seed.py  session.py
backend/app/llm/: __init__.py  anthropic_provider.py  factory.py  mock_provider.py  openai_compatible_provider.py  provider.py  schema_validation.py
backend/app/memory/: __init__.py
backend/app/models/: __init__.py  after_sales_ticket.py  agent_message.py  agent_session.py  agent_tool_log.py  agent_trace.py  approval_task.py  audit_log.py  customer_memory.py  enums.py  idempotency_record.py  logistics_record.py  order.py  order_item.py  policy_chunk.py  policy_document.py  product.py  refund_record.py  reshipment_order.py  system_config.py  user.py
backend/app/observability/: __init__.py  logging.py
backend/app/rag/: __init__.py  chunking.py  content_hash.py  document_parser.py  embeddings.py  ingestion.py  mock_embeddings.py  openai_embeddings.py  validation.py
backend/app/repositories/: __init__.py  agent_message.py  agent_session.py  agent_tool_log.py  agent_trace.py  approval_task.py  audit_log.py  base.py  customer_memory.py  idempotency.py  logistics.py  order.py  order_item.py  policy_chunk.py  product.py  (+6 more)
backend/scripts/: smoke_qwen.py
backend/tests/: conftest.py
(+286 files in other folders)
